# server/controllers/auth.controller.ts
@@ -3,9 +3,9 @@ import { AuthService } from '../services/auth.service';
 
 export const AuthController = {
     async register(req: Request, res: Response, next: NextFunction) {
-        const { username, email, password, firstName, lastName, age, image } = req.body;
+        const { username, email, password, firstName, lastName, age, file } = req.body;
         try {
-            const response = await AuthService.register({ username, email, password, firstName, lastName, age, image });
+            const response = await AuthService.register({ username, email, password, firstName, lastName, age, file });
             res.status(response.status).json(response.data);
         } catch (err: any) {
             res.status(500).json({ error: err.message });
