# server/routes/chunk.routes.ts
@@ -1,11 +1,12 @@
 import { Router } from 'express';
 import { ChunkController } from '../controllers/chunk.controller';
 import {isAuthorized} from "../middlewares/authorization";
+import {uploadController} from "../controllers/upload.controller";
 
 const router = Router();
 
+router.post('/:recordId', [isAuthorized, uploadController.upload, uploadController.verifyUpload, ChunkController.addChunk]);
 router.get('/:recordId', [isAuthorized, ChunkController.getAllChunks]);
 router.get('/:id', [isAuthorized, ChunkController.getChunk]);
-router.post('/:recordId', [isAuthorized, ChunkController.addChunk]);
 
 export default router;
