# server/routes/upload.routes.ts
@@ -3,6 +3,6 @@ import { uploadController } from "../controllers/upload.controller";
 import { RecordController } from "../controllers/record.controller";
 const router = Router();
 
-router.post('/image/:id', uploadController.upload, uploadController.verifyUpload, RecordController.updateRecord);
+router.post('/file/:id', uploadController.upload, uploadController.verifyUpload, RecordController.updateRecord);
 
 export default router;
